<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="@dimen/dp_40">

	<LinearLayout
		android:id="@+id/load_more_loading_view"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:gravity="center"
		android:orientation="horizontal">


		<ProgressBar
			android:id="@+id/loading_progress"
			style="?android:attr/progressBarStyleSmall"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginRight="@dimen/dp_4"
		/>

		<TextView
			android:id="@+id/loading_text"
			style="@style/textView_hint_14"
			android:layout_marginLeft="@dimen/material_4dp"
			android:text="@string/w_loading_more"
		/>
	</LinearLayout>

	<FrameLayout
		android:id="@+id/load_more_load_fail_view"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:visibility="gone">


		<TextView
			android:id="@+id/tv_prompt"
			style="@style/textView_hint_14"
			android:layout_gravity="center"
			android:text="@string/w_load_more_failed"

		/>

	</FrameLayout>

	<FrameLayout
		android:id="@+id/load_more_load_end_view"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:visibility="gone">

		<TextView
			style="@style/textView_hint_14"
			android:layout_gravity="center"
			android:text="@string/w_load_more_end"/>
	</FrameLayout>
</FrameLayout>